Image link changed to imgur link

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -7,7 +7,7 @@
 
 /* Main Background */
 .app-2CXKsg {
-    background-image: url(https://i.pinimg.com/originals/ba/51/e1/ba51e15a838450721f1160b338a35f37.jpg);
+    background-image: url(https://i.imgur.com/1JVM8CU.jpg);
     background-size: cover;
     background-color: transparent;
 }
